feat(api): companies/index
